# app/controllers.go
@@ -1,12 +1,12 @@
-// Code generated by goagen v1.2.0-dirty, DO NOT EDIT.
+// Code generated by goagen v1.3.0, DO NOT EDIT.
 //
 // API "user-profile": Application Controllers
 //
 // Command:
 // $ goagen
 // --design=github.com/JormungandrK/microservice-user-profile/design
-// --out=$(GOPATH)src/github.com/JormungandrK/microservice-user-profile
-// --version=v1.2.0-dirty
+// --out=$(GOPATH)/src/github.com/JormungandrK/microservice-user-profile
+// --version=v1.3.0
 
 package app
 
@@ -81,8 +81,8 @@ func MountUserProfileController(service *goa.Service, ctrl UserProfileController
 		}
 		return ctrl.GetMyProfile(rctx)
 	}
-	service.Mux.Handle("GET", "/profiles/me", ctrl.MuxHandler("GetMyProfile", h, nil))
-	service.LogInfo("mount", "ctrl", "UserProfile", "action", "GetMyProfile", "route", "GET /profiles/me")
+	service.Mux.Handle("GET", "/me", ctrl.MuxHandler("GetMyProfile", h, nil))
+	service.LogInfo("mount", "ctrl", "UserProfile", "action", "GetMyProfile", "route", "GET /me")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -96,8 +96,8 @@ func MountUserProfileController(service *goa.Service, ctrl UserProfileController
 		}
 		return ctrl.GetUserProfile(rctx)
 	}
-	service.Mux.Handle("GET", "/users/:userId/profile", ctrl.MuxHandler("GetUserProfile", h, nil))
-	service.LogInfo("mount", "ctrl", "UserProfile", "action", "GetUserProfile", "route", "GET /users/:userId/profile")
+	service.Mux.Handle("GET", "/:userId", ctrl.MuxHandler("GetUserProfile", h, nil))
+	service.LogInfo("mount", "ctrl", "UserProfile", "action", "GetUserProfile", "route", "GET /:userId")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -117,8 +117,8 @@ func MountUserProfileController(service *goa.Service, ctrl UserProfileController
 		}
 		return ctrl.UpdateMyProfile(rctx)
 	}
-	service.Mux.Handle("PUT", "/profiles/me", ctrl.MuxHandler("UpdateMyProfile", h, unmarshalUpdateMyProfileUserProfilePayload))
-	service.LogInfo("mount", "ctrl", "UserProfile", "action", "UpdateMyProfile", "route", "PUT /profiles/me")
+	service.Mux.Handle("PUT", "/me", ctrl.MuxHandler("UpdateMyProfile", h, unmarshalUpdateMyProfileUserProfilePayload))
+	service.LogInfo("mount", "ctrl", "UserProfile", "action", "UpdateMyProfile", "route", "PUT /me")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -138,8 +138,8 @@ func MountUserProfileController(service *goa.Service, ctrl UserProfileController
 		}
 		return ctrl.UpdateUserProfile(rctx)
 	}
-	service.Mux.Handle("PUT", "/users/:userId/profile", ctrl.MuxHandler("UpdateUserProfile", h, unmarshalUpdateUserProfileUserProfilePayload))
-	service.LogInfo("mount", "ctrl", "UserProfile", "action", "UpdateUserProfile", "route", "PUT /users/:userId/profile")
+	service.Mux.Handle("PUT", "/:userId", ctrl.MuxHandler("UpdateUserProfile", h, unmarshalUpdateUserProfileUserProfilePayload))
+	service.LogInfo("mount", "ctrl", "UserProfile", "action", "UpdateUserProfile", "route", "PUT /:userId")
 }
 
 // unmarshalUpdateMyProfileUserProfilePayload unmarshals the request body into the context request data Payload field.
