# swagger/swagger.yaml
@@ -98,15 +98,84 @@ info:
   title: User Profile Microservice
   version: "1.0"
 paths:
-  /profiles/me:
+  /{userId}:
+    get:
+      description: Get a UserProfile by UserID
+      operationId: userProfile#GetUserProfile
+      parameters:
+      - description: The user ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/jormungandr.user-profile+json
+      - application/vnd.goa.error
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userProfile'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: GetUserProfile userProfile
+      tags:
+      - userProfile
+    put:
+      description: Update user profile
+      operationId: userProfile#UpdateUserProfile
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: UserProfile data
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/UserProfilePayload'
+      produces:
+      - application/jormungandr.user-profile+json
+      - application/vnd.goa.error
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userProfile'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: UpdateUserProfile userProfile
+      tags:
+      - userProfile
+  /me:
     get:
       description: Get a UserProfile by UserID
       operationId: userProfile#GetMyProfile
       produces:
-      - application/vnd.goa.error
-      - application/vnd.goa.error
-      - application/vnd.goa.error
       - application/jormungandr.user-profile+json
+      - application/vnd.goa.error
       responses:
         "200":
           description: OK
@@ -140,10 +209,8 @@ paths:
         schema:
           $ref: '#/definitions/UserProfilePayload'
       produces:
-      - application/vnd.goa.error
-      - application/vnd.goa.error
-      - application/vnd.goa.error
       - application/jormungandr.user-profile+json
+      - application/vnd.goa.error
       responses:
         "200":
           description: OK
@@ -198,80 +265,6 @@ paths:
       schemes:
       - http
       summary: Download swagger/swagger.json
-  /users/{userId}/profile:
-    get:
-      description: Get a UserProfile by UserID
-      operationId: userProfile#GetUserProfile
-      parameters:
-      - description: The user ID
-        in: path
-        name: userId
-        required: true
-        type: string
-      produces:
-      - application/vnd.goa.error
-      - application/vnd.goa.error
-      - application/vnd.goa.error
-      - application/jormungandr.user-profile+json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/userProfile'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/error'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/error'
-      schemes:
-      - http
-      summary: GetUserProfile userProfile
-      tags:
-      - userProfile
-    put:
-      description: Update user profile
-      operationId: userProfile#UpdateUserProfile
-      parameters:
-      - description: User ID
-        in: path
-        name: userId
-        required: true
-        type: string
-      - description: UserProfile data
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/UserProfilePayload'
-      produces:
-      - application/vnd.goa.error
-      - application/vnd.goa.error
-      - application/jormungandr.user-profile+json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/userProfile'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/error'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/error'
-      schemes:
-      - http
-      summary: UpdateUserProfile userProfile
-      tags:
-      - userProfile
 produces:
 - application/json
 - application/xml
